--- a/vue-image-tag/src/assets/main.css
+++ b/vue-image-tag/src/assets/main.css
@@ -8,10 +8,9 @@
   font-weight: normal;
 }
 
-a,
-.green {
+a{
   text-decoration: none;
-  color: hsla(160, 100%, 37%, 1);
+  color: blue;
   transition: 0.4s;
 }
 
@@ -23,13 +22,9 @@ a,
 
 @media (min-width: 1024px) {
   body {
-    display: flex;
-    place-items: center;
   }
 
   #app {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
     padding: 0 2rem;
   }
 }
